--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
+    "build": "echo \"No build step required\""
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
