--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "engines": {
-    "node": "20.18.0"
+    "node": "20.18.0",
+    "npm": "10.8.2"
   },
   "name": "major_project",
   "version": "1.0.0",
